tests/ui/asm/m68k/bad-reg.m68k.stderr
error: invalid register `a4`: a4 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:19:18
   |
LL |         asm!("", out("a4") _);
   |                  ^^^^^^^^^^^

error: invalid register `a5`: a5 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:21:18
   |
LL |         asm!("", out("a5") _);
   |                  ^^^^^^^^^^^

error: invalid register `bp`: a5 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:23:18
   |
LL |         asm!("", out("bp") _);
   |                  ^^^^^^^^^^^

error: invalid register `a6`: a6 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:25:18
   |
LL |         asm!("", out("a6") _);
   |                  ^^^^^^^^^^^

error: invalid register `fp`: a6 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:27:18
   |
LL |         asm!("", out("fp") _);
   |                  ^^^^^^^^^^^

error: invalid register `a7`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:29:18
   |
LL |         asm!("", out("a7") _);
   |                  ^^^^^^^^^^^

error: invalid register `sp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:31:18
   |
LL |         asm!("", out("sp") _);
   |                  ^^^^^^^^^^^

error: invalid register `usp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:33:18
   |
LL |         asm!("", out("usp") _);
   |                  ^^^^^^^^^^^^

error: invalid register `ssp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:35:18
   |
LL |         asm!("", out("ssp") _);
   |                  ^^^^^^^^^^^^

error: invalid register `isp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:37:18
   |
LL |         asm!("", out("isp") _);
   |                  ^^^^^^^^^^^^

error: register class `freg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:41:26
   |
LL |         asm!("/* {} */", in(freg) f);
   |                          ^^^^^^^^^^

error: register class `freg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:44:26
   |
LL |         asm!("/* {} */", out(freg) _);
   |                          ^^^^^^^^^^^

error: register class `freg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:46:26
   |
LL |         asm!("/* {} */", in(freg) d);
   |                          ^^^^^^^^^^

error: register class `freg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:49:26
   |
LL |         asm!("/* {} */", out(freg) d);
   |                          ^^^^^^^^^^^

error: type `f32` cannot be used with this register class
  --> $DIR/bad-reg.rs:41:35
   |
LL |         asm!("/* {} */", in(freg) f);
   |                                   ^
   |
   = note: register class `freg` supports these types: 

error: type `f64` cannot be used with this register class
  --> $DIR/bad-reg.rs:46:35
   |
LL |         asm!("/* {} */", in(freg) d);
   |                                   ^
   |
   = note: register class `freg` supports these types: 

error: type `f64` cannot be used with this register class
  --> $DIR/bad-reg.rs:49:36
   |
LL |         asm!("/* {} */", out(freg) d);
   |                                    ^
   |
   = note: register class `freg` supports these types: 

error: aborting due to 17 previous errors

